# greasemonkey-V2

./: BUILD_SUMMARY.md  MOBILE_THEME_GUIDE.md  SOCIAL_LOGIN_GUIDE.md  backend_test.py  demo.html  greasemonkey-v2.code-workspace  start_dev.sh  test_result.md
.emergent/: emergent.yml
GreaseMonkeyMobile/: App.tsx  app.json  package-lock.json  package.json
GreaseMonkeyMobile/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
GreaseMonkeyMobile/src/context/: AuthContext.tsx
GreaseMonkeyMobile/src/navigation/: AppNavigator.tsx
GreaseMonkeyMobile/src/screens/auth/: LoginScreen.tsx  RegisterScreen.tsx
GreaseMonkeyMobile/src/screens/detail/: CreatePostScreen.tsx  CreateRideScreen.tsx  EditProfileScreen.tsx  PostDetailScreen.tsx  RideDetailScreen.tsx  (+1 more)
GreaseMonkeyMobile/src/services/: api.ts
GreaseMonkeyMobile/src/styles/: theme.ts
GreaseMonkeyMobile/src/types/: index.ts
backend/: .env  =4.0.0  API_DOCUMENTATION.md  IDE_TROUBLESHOOTING.md  auth.py  database.py  pyproject.toml  pyrightconfig.json  requirements.txt  server.py  setup_ide.py  simple_server.py  validate_env.py
backend/middleware/: error_handler.py  security.py
backend/models/: comment.py  garage.py  notification.py  post.py  search.py  user.py
backend/routes/: auth.py  comments.py  garage.py  media.py  notifications.py  posts.py  saved_posts.py  search.py  social_auth.py  users.py  websocket.py
backend/tests/: conftest.py  test_auth.py
frontend/: .env  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/config/: social-config.js
frontend/src/contexts/: AuthContext.js
(+28 files in other folders)
