[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greasemonkey-backend"
version = "2.0.0"
description = "GreaseMonkey V2 Backend API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.110.1",
    "uvicorn==0.25.0",
    "boto3>=1.34.129",
    "requests-oauthlib>=2.0.0",
    "cryptography>=42.0.8",
    "python-dotenv>=1.0.1",
    "pymongo==4.5.0",
    "pydantic>=2.6.4",
    "email-validator>=2.2.0",
    "pyjwt>=2.10.1",
    "passlib>=1.7.4",
    "tzdata>=2024.2",
    "motor==3.3.1",
    "pytest>=8.0.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "python-jose>=3.3.0",
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "python-multipart>=0.0.9",
    "jq>=1.6.0",
    "typer>=0.9.0",
    "bcrypt>=4.0.0"
]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true